feat(api): publish developer documentation
